--- a/springloaded-core/build.gradle
+++ b/springloaded-core/build.gradle
@@ -2,6 +2,15 @@ group = "org.springsource.loaded"
 version = '1.1.5.BUILD-SNAPSHOT'
 jar.baseName = 'springloaded'
 
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            pom.artifactId = project.jar.baseName
+        }
+    }
+}
+
 task writeNewPom << {
   pom {
     project  {
