--- a/springloaded-core/build.gradle
+++ b/springloaded-core/build.gradle
@@ -3,12 +3,31 @@ version = '1.1.5.BUILD-SNAPSHOT'
 jar.baseName = 'springloaded'
 
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            pom.artifactId = project.jar.baseName
-        }
-    }
+install {
+	repositories.mavenInstaller {
+		customizePom(pom, project)
+	}
+}
+
+
+def customizePom(pom, gradleProject) {
+	pom.project {
+		name = gradleProject.name
+		artifactId = project.jar.baseName
+		description = gradleProject.name
+		url = 'http://spring.io/spring-security'
+		organization {
+			name = 'spring.io'
+			url = 'http://spring.io/'
+		}
+		licenses {
+			license {
+				name 'The Apache Software License, Version 2.0'
+				url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+				distribution 'repo'
+			}
+		}
+	}
 }
 
 task writeNewPom << {
